--- a/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
+++ b/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
@@ -54,10 +54,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="AsyncServerTests.cs" />
+    <Compile Include="Tests\AsyncServerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ThreadRunnerTest.cs" />
-    <Compile Include="ClientConnectionAgentTest.cs" />
+    <Compile Include="Tests\ThreadRunnerTest.cs" />
+    <Compile Include="Tests\ClientConnectionAgentTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
