--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -40,10 +40,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientConnectionAgent.cs" />
+    <Compile Include="ClientMessageSpooler.cs" />
+    <Compile Include="INetworkMessageReader.cs" />
     <Compile Include="IRunnable.cs" />
     <Compile Include="ITcpClient.cs" />
     <Compile Include="ITcpListener.cs" />
     <Compile Include="MessageParser.cs" />
+    <Compile Include="NetworkMessageReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AsyncTcpServer.cs" />
     <Compile Include="ThreadRunner.cs" />
