--- a/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
+++ b/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\ThreadRunnerTest.cs" />
     <Compile Include="Tests\ClientConnectionAgentTest.cs" />
+    <Compile Include="Tests\ClientMessageSpoolerTest.cs" />
+    <Compile Include="Tests\NetworkMessageReaderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
