Added OutboundMessageSpooler. It has some issue with stopping the thread if Spool is called, because it blocks if the queue is empty.

--- a/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
+++ b/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Tests\ClientConnectionAgentTest.cs" />
     <Compile Include="Tests\ClientMessageSpoolerTest.cs" />
     <Compile Include="Tests\NetworkMessageReaderTests.cs" />
+    <Compile Include="Tests\OutboundMessageSpoolerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
