--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ITcpListener.cs" />
     <Compile Include="MessageParser.cs" />
     <Compile Include="NetworkMessageReader.cs" />
+    <Compile Include="OutboundMessageSpooler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AsyncTcpServer.cs" />
     <Compile Include="ThreadRunner.cs" />
