--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseTcpClient.cs" />
     <Compile Include="ClientConnectionAgent.cs" />
     <Compile Include="InboundMessageSpooler.cs" />
     <Compile Include="INetworkMessageReader.cs" />
@@ -48,6 +49,7 @@
     <Compile Include="MessageParser.cs" />
     <Compile Include="NetworkMessageReader.cs" />
     <Compile Include="OutboundMessageSpooler.cs" />
+    <Compile Include="OutboundMessageSpoolerRunnable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AsyncTcpServer.cs" />
     <Compile Include="ThreadRunner.cs" />
