Decoupled interfaces from both MessageSpoolerRunnables.

--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -41,8 +41,11 @@
   <ItemGroup>
     <Compile Include="BaseTcpClient.cs" />
     <Compile Include="ClientConnectionAgent.cs" />
+    <Compile Include="IInboundMessageSpoolerRunnable.cs" />
+    <Compile Include="InboundMessageSpooler.cs" />
     <Compile Include="InboundMessageSpoolerRunnable.cs" />
     <Compile Include="INetworkMessageReader.cs" />
+    <Compile Include="IOutboundMessageSpoolerRunnable.cs" />
     <Compile Include="IRunnable.cs" />
     <Compile Include="ITcpClient.cs" />
     <Compile Include="ITcpListener.cs" />
