--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -39,23 +39,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseTcpClient.cs" />
-    <Compile Include="ClientConnectionAgent.cs" />
-    <Compile Include="IInboundMessageSpoolerRunnable.cs" />
-    <Compile Include="InboundMessageSpooler.cs" />
-    <Compile Include="InboundMessageSpoolerRunnable.cs" />
-    <Compile Include="INetworkMessageReader.cs" />
-    <Compile Include="IOutboundMessageSpoolerRunnable.cs" />
-    <Compile Include="IRunnable.cs" />
-    <Compile Include="ITcpClient.cs" />
-    <Compile Include="ITcpListener.cs" />
-    <Compile Include="MessageParser.cs" />
-    <Compile Include="NetworkMessageReader.cs" />
-    <Compile Include="OutboundMessageSpooler.cs" />
-    <Compile Include="OutboundMessageSpoolerRunnable.cs" />
+    <Compile Include="src\BaseTcpClient.cs" />
+    <Compile Include="src\ClientConnectionAgent.cs" />
+    <Compile Include="src\IInboundMessageSpoolerRunnable.cs" />
+    <Compile Include="src\InboundMessageSpooler.cs" />
+    <Compile Include="src\InboundMessageSpoolerRunnable.cs" />
+    <Compile Include="src\INetworkMessageReader.cs" />
+    <Compile Include="src\IOutboundMessageSpoolerRunnable.cs" />
+    <Compile Include="src\IRunnable.cs" />
+    <Compile Include="src\ITcpClient.cs" />
+    <Compile Include="src\ITcpListener.cs" />
+    <Compile Include="src\MessageParser.cs" />
+    <Compile Include="src\NetworkMessageReader.cs" />
+    <Compile Include="src\OutboundMessageSpooler.cs" />
+    <Compile Include="src\OutboundMessageSpoolerRunnable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AsyncTcpServer.cs" />
-    <Compile Include="ThreadRunner.cs" />
+    <Compile Include="src\AsyncTcpServer.cs" />
+    <Compile Include="src\ThreadRunner.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
