--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -42,6 +42,7 @@
     <Compile Include="src\ClientConnectionAgent.cs" />
     <Compile Include="src\IClientConnectionAgent.cs" />
     <Compile Include="src\IClientConnectionAgentRunnable.cs" />
+    <Compile Include="src\IThreadRunner.cs" />
     <Compile Include="src\PeerConnection.cs" />
     <Compile Include="src\IInboundMessageSpooler.cs" />
     <Compile Include="src\IOutboundMessageSpooler.cs" />
