--- a/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
+++ b/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Tests\InboundMessageSpoolerTest.cs" />
     <Compile Include="Tests\PeerConnectionTest.cs" />
     <Compile Include="Tests\ClientConnectionAgentTests.cs" />
-    <Compile Include="Tests\UnitTest1.cs" />
+    <Compile Include="Tests\ConnectionManagerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
