--- a/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
+++ b/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Tests\ClientConnectionAgentTests.cs" />
     <Compile Include="Tests\ConnectionManagerTests.cs" />
     <Compile Include="Tests\AsyncServerTests.cs" />
+    <Compile Include="Tests\MessagePollerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
