Updated ConnectionManagerTests and ConnectionManager interface for better testing

--- a/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
+++ b/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Tests\AsyncServerTests.cs" />
     <Compile Include="Tests\MessagePollerTests.cs" />
     <Compile Include="Tests\MessagePollerRunnableTests.cs" />
+    <Compile Include="Tests\temp_ConcurrentDictionaryLockingTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
