--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -39,8 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IAsyncServer.cs" />
-    <Compile Include="MessagePoller.cs" />
+    <Compile Include="src\IAsyncServer.cs" />
+    <Compile Include="src\MessagePoller.cs" />
     <Compile Include="src\IMessagePoller.cs" />
     <Compile Include="src\IMessagePollerRunnable.cs" />
     <Compile Include="src\MessagePollerRunnable.cs" />
