--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -57,7 +57,7 @@
     <Compile Include="src\IPeerConnection.cs" />
     <Compile Include="src\IThreadRunner.cs" />
     <Compile Include="src\NetworkMessage.cs" />
-    <Compile Include="src\PeerConnection.cs" />
+    <Compile Include="src\AsyncClient.cs" />
     <Compile Include="src\IInboundMessageSpooler.cs" />
     <Compile Include="src\IOutboundMessageSpooler.cs" />
     <Compile Include="src\BaseTcpClient.cs" />
@@ -74,7 +74,7 @@
     <Compile Include="src\OutboundMessageSpooler.cs" />
     <Compile Include="src\OutboundMessageSpoolerRunnable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\PeerConnectionFactory.cs" />
+    <Compile Include="src\AsyncClientFactory.cs" />
     <Compile Include="src\ThreadRunner.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
