--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -77,6 +77,7 @@
     <Compile Include="src\OutboundMessageSpoolerRunnable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\AsyncClientFactory.cs" />
+    <Compile Include="src\PeerDisconnected.cs" />
     <Compile Include="src\ThreadRunner.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
