[TESTS PASSING AGAIN] Refactored network write layer code into a new object class implementing the new interface INetworkWriter.

--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\INetworkMessageWriter.cs" />
+    <Compile Include="src\NetworkMessageWriter.cs" />
     <Compile Include="src\ReadResult.cs" />
     <Compile Include="src\AsyncMessagingClient.cs" />
     <Compile Include="src\AsyncMessagingClientFactory.cs" />
