--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\AsyncMessagingClientConfig.cs" />
     <Compile Include="src\INetworkMessageWriter.cs" />
     <Compile Include="src\NetworkMessageWriter.cs" />
     <Compile Include="src\ReadResult.cs" />
