Implementation code has been moved to another namespace. NetworkMessageReader now returns a ReadResult holding an MessageTooBigException object.

--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -44,51 +44,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\AsyncMessagingClientConfig.cs" />
-    <Compile Include="src\INetworkMessageWriter.cs" />
-    <Compile Include="src\NetworkMessageWriter.cs" />
+    <Compile Include="src\ReadErrorEventHandler.cs" />
+    <Compile Include="src\ReadErrorEventArgs.cs" />
+    <Compile Include="src\AsyncMessaging\AsyncMessagingClientConfig.cs" />
+    <Compile Include="src\AsyncMessaging\Interfaces\INetworkMessageWriter.cs" />
+    <Compile Include="src\AsyncMessaging\NetworkMessageWriter.cs" />
     <Compile Include="src\ReadResult.cs" />
-    <Compile Include="src\AsyncMessagingClient.cs" />
-    <Compile Include="src\AsyncMessagingClientFactory.cs" />
-    <Compile Include="src\AsyncMessagingServer.cs" />
+    <Compile Include="src\AsyncMessaging\AsyncMessagingClient.cs" />
+    <Compile Include="src\AsyncMessaging\AsyncMessagingClientFactory.cs" />
+    <Compile Include="src\AsyncMessaging\AsyncMessagingServer.cs" />
     <Compile Include="src\ClientConfig.cs" />
-    <Compile Include="src\INetworkReader.cs" />
-    <Compile Include="src\INetworkReaderFactory.cs" />
-    <Compile Include="src\INetworkStreamReader.cs" />
-    <Compile Include="src\INetworkWriter.cs" />
-    <Compile Include="src\INetworkWriterFactory.cs" />
-    <Compile Include="src\IOutboundMessageFactory.cs" />
-    <Compile Include="src\IAsyncServer.cs" />
+    <Compile Include="src\Interfaces\INetworkReader.cs" />
+    <Compile Include="src\Interfaces\INetworkReaderFactory.cs" />
+    <Compile Include="src\Interfaces\INetworkStreamReader.cs" />
+    <Compile Include="src\Interfaces\INetworkWriter.cs" />
+    <Compile Include="src\Interfaces\INetworkWriterFactory.cs" />
+    <Compile Include="src\Interfaces\IOutboundMessageFactory.cs" />
+    <Compile Include="src\Interfaces\IAsyncServer.cs" />
     <Compile Include="src\MessagePoller.cs" />
-    <Compile Include="src\IMessagePoller.cs" />
-    <Compile Include="src\IMessagePollerRunnable.cs" />
+    <Compile Include="src\Interfaces\IMessagePoller.cs" />
+    <Compile Include="src\Interfaces\IMessagePollerRunnable.cs" />
     <Compile Include="src\MessagePollerRunnable.cs" />
     <Compile Include="src\AsyncServer.cs" />
-    <Compile Include="src\IConnectionManager.cs" />
+    <Compile Include="src\Interfaces\IConnectionManager.cs" />
     <Compile Include="src\BaseTcpListener.cs" />
-    <Compile Include="src\IAsyncClientFactory.cs" />
+    <Compile Include="src\Interfaces\IAsyncClientFactory.cs" />
     <Compile Include="src\ConnectionManager.cs" />
     <Compile Include="src\BaseSocket.cs" />
-    <Compile Include="src\ISocket.cs" />
+    <Compile Include="src\Interfaces\ISocket.cs" />
     <Compile Include="src\ClientConnectionAgent.cs" />
-    <Compile Include="src\IClientConnectionAgent.cs" />
-    <Compile Include="src\IClientConnectionAgentRunnable.cs" />
-    <Compile Include="src\IAsyncClient.cs" />
-    <Compile Include="src\IThreadRunner.cs" />
+    <Compile Include="src\Interfaces\IClientConnectionAgent.cs" />
+    <Compile Include="src\Interfaces\IClientConnectionAgentRunnable.cs" />
+    <Compile Include="src\Interfaces\IAsyncClient.cs" />
+    <Compile Include="src\Interfaces\IThreadRunner.cs" />
     <Compile Include="src\AsyncClient.cs" />
-    <Compile Include="src\IInboundMessageSpooler.cs" />
-    <Compile Include="src\IOutboundMessageSpooler.cs" />
+    <Compile Include="src\Interfaces\IInboundMessageSpooler.cs" />
+    <Compile Include="src\Interfaces\IOutboundMessageSpooler.cs" />
     <Compile Include="src\BaseTcpClient.cs" />
     <Compile Include="src\ClientConnectionAgentRunnable.cs" />
-    <Compile Include="src\IInboundMessageSpoolerRunnable.cs" />
+    <Compile Include="src\Interfaces\IInboundMessageSpoolerRunnable.cs" />
     <Compile Include="src\InboundMessageSpooler.cs" />
     <Compile Include="src\InboundMessageSpoolerRunnable.cs" />
-    <Compile Include="src\INetworkMessageReader.cs" />
-    <Compile Include="src\IOutboundMessageSpoolerRunnable.cs" />
-    <Compile Include="src\IRunnable.cs" />
-    <Compile Include="src\ITcpClient.cs" />
-    <Compile Include="src\ITcpListener.cs" />
-    <Compile Include="src\NetworkMessageReader.cs" />
+    <Compile Include="src\AsyncMessaging\Interfaces\INetworkMessageReader.cs" />
+    <Compile Include="src\Interfaces\IOutboundMessageSpoolerRunnable.cs" />
+    <Compile Include="src\Interfaces\IRunnable.cs" />
+    <Compile Include="src\Interfaces\ITcpClient.cs" />
+    <Compile Include="src\Interfaces\ITcpListener.cs" />
+    <Compile Include="src\AsyncMessaging\NetworkMessageReader.cs" />
     <Compile Include="src\NetworkStreamReader.cs" />
     <Compile Include="src\NewClientConnected.cs" />
     <Compile Include="src\NewMessageReceived.cs" />
