--- a/AsyncSocks/AsyncSocks.csproj
+++ b/AsyncSocks/AsyncSocks.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\AsyncBuffered\NetworkBufferedWriter.cs" />
+    <Compile Include="src\AsyncBuffered\Interfaces\INetworkBufferedWriter.cs" />
     <Compile Include="src\ReadErrorEventHandler.cs" />
     <Compile Include="src\ReadErrorEventArgs.cs" />
     <Compile Include="src\AsyncMessaging\AsyncMessagingClientConfig.cs" />
