--- a/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
+++ b/Tests/AsyncSocks_Tests/AsyncSocks_Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Helpers\AsyncStoppingThreadRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\NetworkBufferedReaderTests.cs" />
+    <Compile Include="Tests\NetworkBufferedWriterTests.cs" />
     <Compile Include="Tests\ThreadRunnerTest.cs" />
     <Compile Include="Tests\ClientConnectionAgentRunnableTest.cs" />
     <Compile Include="Tests\InboundMessageSpoolerRunnableTest.cs" />
